Improve share-out transparency breakdown
